worked on painting upload on frontend and auth filter on backend